Finalize ML notebook with XGBoost and RMSE ~45

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(\"society\", axis=1, errors=\"ignore\")\n",
+    "df = df.drop([\"society\",\"balcony\",\"availability\", \"area_type\"], axis=1, errors=\"ignore\")\n",
+    "df = df.rename(columns={\"bath\": \"bathroom\"})\n",
     "df = df.dropna()\n",
     "df.isnull().sum()"
    ]
@@ -81,23 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2237ff74",
+   "id": "d1588f39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop([\"availability\", \"area_type\"], axis=1,errors=\"ignore\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c947c9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"price_per_sqft\"] = (df[\"price\"] * 100000) / df[\"total_sqft\"]\n",
-    "df.head()"
+    "df[\"sqft_per_bhk\"] = df[\"total_sqft\"] / df[\"bhk\"]\n"
    ]
   },
   {
@@ -107,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df[\"total_sqft\"] / df[\"bhk\"] >= 300]\n",
+    "df = df[df[\"sqft_per_bhk\"] >= 300]\n",
+    "df=df.drop([\"sqft_per_bhk\"], axis=1, errors=\"ignore\")\n",
     "df.head()"
    ]
   },
@@ -142,12 +132,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8b6b0a63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"price\"] < df[\"price\"].quantile(0.99)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c127e402",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "X = df.drop(\"price\", axis=1)\n",
-    "y = df[\"price\"]"
+    "y = np.log1p(df[\"price\"])"
    ]
   },
   {
@@ -186,9 +187,9 @@
     ")\n",
     "\n",
     "model = XGBRegressor(\n",
-    "    n_estimators=400,\n",
-    "    max_depth=6,\n",
-    "    learning_rate=0.05,\n",
+    "    n_estimators=600,\n",
+    "    max_depth=8,\n",
+    "    learning_rate=0.03,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
     "    random_state=42,\n",
@@ -204,7 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred=model.predict(X_test)"
+    "pred = np.expm1(model.predict(X_test))\n",
+    "y_true = np.expm1(y_test)"
    ]
   },
   {
@@ -214,8 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "rmse=np.sqrt(mean_squared_error(y_test, pred))\n",
+    "rmse=np.sqrt(mean_squared_error(y_true, pred))\n",
     "print(\"RMSE:\", rmse)"
    ]
   },
