Clean notebook, improve RMSE

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -53,6 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "df[\"bathroom\"] = df[\"bathroom\"].astype(int)\n",
     "df[\"bhk\"] = df[\"size\"].str.split().str[0].astype(int)\n",
     "df = df.drop(\"size\", axis=1)\n",
     "df.head()\n"
