ML: refine feature engineering, remove leakage, update final RMSE

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -113,7 +113,7 @@
     "location_stats = df[\"location\"].value_counts()\n",
     "\n",
     "location_stats_less_10 = location_stats[location_stats <= 10]\n",
-    "\n",
+    "df[\"location\"] = df[\"location\"].str.strip().str.lower()\n",
     "df[\"location\"] = df[\"location\"].apply(\n",
     "    lambda x: \"other\" if x in location_stats_less_10 else x\n",
     ")\n",
@@ -150,7 +150,8 @@
    "source": [
     "import numpy as np\n",
     "X = df.drop(\"price\", axis=1)\n",
-    "y = np.log1p(df[\"price\"])"
+    "y = np.log1p(df[\"price\"])\n",
+    "print(X.columns)"
    ]
   },
   {
